<resources>
    <string name="app_name">TheGitUsers</string>
    <string name="no_internt_msg">No network connection</string>

    <string name="repository_retrieval_failure_msg">Failed to get repositories. Please try again</string>
    <string name="contributors_retrieval_failure_msg">Failed to get contributors. Please try again</string>
    <string name="name_heading">Name:</string>
    <string name="full_name_heading">Full Name:</string>
    <string name="watcher_count_heading">Watcher Count:</string>
    <string name="search_repository">Search repositories</string>
    <string name="name_title">Name</string>
    <string name="project_link_title">Project Link</string>
    <string name="description_title">Description</string>
    <string name="contributors_title">Contributors</string>
    <string name="repository_title">Repository</string>
    <string name="project_link">Project Link</string>
    <string name="repo_list_title">Repo List</string>
    <string name="contributor_title">Contributor</string>
</resources>
