<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="viewModel" type="com.rba.thegitusers.features.repository.repository.RepositoryViewModel"/>
        <variable name="title" type="String"/>
    </data>

    <android.support.constraint.ConstraintLayout
            android:animateLayoutChanges="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            tools:context=".features.repository.repository.RepositoryFragment">

        <include android:id="@+id/plToolbar"
                 layout="@layout/partial_title_toolbar"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 bind:title="@{title}"
                 app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
                android:id="@+id/ivOwnerImage"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp200"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="centerCrop"
                app:srcUrl="@{viewModel.obsRepo.ownerImage}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/plToolbar"/>

        <!--NAME TITLE-->
        <TextView
                android:layout_marginTop="@dimen/dp20"
                android:id="@+id/tvNameTitle"
                android:text="@string/name_title"
                app:layout_constraintTop_toBottomOf="@+id/ivOwnerImage"
                style="@style/TitleTextStyle"
                app:layout_constraintStart_toStartOf="@+id/glStartHori"/>

        <!--NAME CONTENT-->
        <TextView
                style="@style/ContentTextStyle"
                tools:text="@string/app_name"
                android:text="@{viewModel.obsRepo.name}"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginLeft="@dimen/dp10"
                app:layout_constraintBottom_toBottomOf="@+id/tvNameTitle"
                app:layout_constraintTop_toTopOf="@+id/tvNameTitle"
                app:layout_constraintStart_toEndOf="@+id/tvNameTitle"/>


        <!--LINK TITLE-->
        <TextView
                android:id="@+id/tvLinkTitle"
                android:text="@string/project_link_title"
                style="@style/TitleTextStyle"
                android:layout_marginTop="@dimen/dp20"
                app:layout_constraintStart_toStartOf="@+id/glStartHori"
                app:layout_constraintTop_toBottomOf="@+id/tvNameTitle"/>

        <!--LINK CONTENT-->
        <TextView
                android:id="@+id/tvLinkContent"
                style="@style/ContentTextStyle"
                tools:text="https://google.com"
                android:text="@{viewModel.obsRepo.htmlUrl}"
                android:textColor="@android:color/holo_blue_light"
                android:layout_marginStart="@dimen/dp10"
                android:layout_width="0dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:singleLine="true"
                android:ellipsize="end"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginRight="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp10"
                app:layout_constraintTop_toTopOf="@+id/tvLinkTitle"
                app:layout_constraintBottom_toBottomOf="@+id/tvLinkTitle"
                app:layout_constraintStart_toEndOf="@+id/tvLinkTitle"
                app:layout_constraintEnd_toEndOf="parent"/>


        <!--DESCRIPTION TITLE-->
        <TextView
                android:id="@+id/tvDescriptionTitle"
                android:text="@string/description_title"
                style="@style/TitleTextStyle"
                android:layout_marginTop="@dimen/dp20"
                app:layout_constraintStart_toStartOf="@+id/glStartHori"
                app:layout_constraintTop_toBottomOf="@+id/tvLinkTitle"/>

        <!--DESCRIPTION CONTENT-->
        <TextView
                android:id="@+id/tvDescription"
                style="@style/ContentTextStyle"
                tools:text="@string/app_name"
                android:text="@{viewModel.obsRepo.description}"
                android:gravity="start"
                android:layout_width="0dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginRight="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp20"
                android:layout_marginTop="@dimen/dp10"
                app:layout_constraintStart_toStartOf="@+id/glStartHori"
                app:layout_constraintTop_toBottomOf="@+id/tvDescriptionTitle"
                app:layout_constraintEnd_toEndOf="parent"/>

        <!--DESCRIPTION TITLE-->
        <TextView
                android:id="@+id/tvContributionTitle"
                android:text="@string/contributors_title"
                style="@style/TitleTextStyle"
                android:layout_marginTop="@dimen/dp20"
                app:layout_constraintTop_toBottomOf="@+id/tvDescription"
                app:layout_constraintStart_toStartOf="@+id/glStartHori"/>

        <!--CONTRIBUTORS LIST-->
        <android.support.v7.widget.RecyclerView
                android:id="@+id/rvContributors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/tvContributionTitle"
                app:layout_constraintStart_toStartOf="@+id/glStartHori"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/glStartHori"
                app:layout_constraintGuide_percent="0.05"
                android:orientation="vertical"/>


    </android.support.constraint.ConstraintLayout>
</layout>